--- a/Assets/style.css
+++ b/Assets/style.css
@@ -15,7 +15,11 @@ body {
     padding: 0;
     font-family: 'Courier New bold', 'Consolas', "Lucida Sans Typewriter", 'Monaco', 'Andale Mono';
     color: var(--primary);
-    background-color: var(--light);
+    background: hsla(64, 41%, 92%, 1);
+    background: linear-gradient(90deg, hsla(64, 41%, 92%, 1) 0%, hsla(196, 83%, 84%, 1) 50%, hsla(305, 75%, 83%, 1) 100%);
+    background: -moz-linear-gradient(90deg, hsla(64, 41%, 92%, 1) 0%, hsla(196, 83%, 84%, 1) 50%, hsla(305, 75%, 83%, 1) 100%);
+    background: -webkit-linear-gradient(90deg, hsla(64, 41%, 92%, 1) 0%, hsla(196, 83%, 84%, 1) 50%, hsla(305, 75%, 83%, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#F2F3E2", endColorstr="#B2E5F8", GradientType=1 );
     line-height: 1.5;
 }
 
@@ -87,7 +91,7 @@ main{
 
 .hero-banner{
     background:rgb(8, 22, 46);
-    background-image: url("/.../02 Advanced CSS: Portfolio HW/Assets/Images/hero-banner-image.jpeg"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
+    background-image: url("https://github.com/Hbrown16/02-Advanced-CSS-Portfolio/blob/main/Assets/Images/hero-banner-image.jpeg?raw=true"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
     background-size: cover;
     background-blend-mode: normal;
     min-height: 30vh;
