--- a/Assets/style.css
+++ b/Assets/style.css
@@ -91,7 +91,7 @@ main{
 
 .hero-banner{
     background:rgb(8, 22, 46);
-    background-image: url("https://github.com/Hbrown16/02-Advanced-CSS-Portfolio/blob/main/Assets/Images/hero-banner-image.jpeg?raw=true"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
+    background-image: url("02 Advanced CSS: Portfolio HW/02-Advanced-CSS-Portfolio/Assets/Images/hero-banner-image.jpeg"), linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%);
     background-size: cover;
     background-blend-mode: normal;
     min-height: 30vh;
@@ -117,7 +117,7 @@ main{
 }
 
 .page-wrapper {
-    background-image: url("https://github.com/Hbrown16/02-Advanced-CSS-Portfolio/blob/main/Assets/Images/about-me.jpeg?raw=true");
+    background-image: url("02 Advanced CSS: Portfolio HW/02-Advanced-CSS-Portfolio/Assets/Images/about-me.jpeg");
     background-repeat: no-repeat;
     background-size: 150px 250px;
     max-width: 88%;
@@ -160,7 +160,7 @@ main{
 
 .flex-item {
     border: 5px solid var(--secondary);
-    background-image: url("https://github.com/Hbrown16/02-Advanced-CSS-Portfolio/blob/main/Assets/Images/Screen%20Shot%202021-05-07%20at%201.32.07%20PM.png?raw=true");
+    background-image: url("02 Advanced CSS: Portfolio HW/02-Advanced-CSS-Portfolio/Assets/Images/Screen Shot 2021-05-07 at 1.32.07 PM.png");
     color: var(--tertiary);
     min-height: 150px;
     max-height: 150px;
