--- a/Assets/style.css
+++ b/Assets/style.css
@@ -117,7 +117,7 @@ main{
 }
 
 .page-wrapper {
-    background-image: url("02 Advanced CSS: Portfolio HW/02-Advanced-CSS-Portfolio/Assets/Images/about-me.jpeg");
+    background-image: url("./Images/Screen\ Shot\ 2021-05-07\ at\ 1.32.07\ PM.png");
     background-repeat: no-repeat;
     background-size: 150px 250px;
     max-width: 88%;
